<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>

    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_download">Download</string>
    <string name="button_completed">Completed</string>
    <string name="button_loading">Loading...</string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="glide_radio">Glide by Bumptech v4.11.0 - Image Library</string>
    <string name="loadapp_radio">LoadApp Starter Code by Udacity - Android Kotlin ND Project 3</string>
    <string name="retrofit_radio">Retrofit by Square v2.9.0 - Networking Library</string>

    <string name="no_file_selected">Please select a file to download</string>
    <string name="download_success">Download successful</string>
    <string name="download_failed">Download failed</string>

    <!-- content desc -->
    <string name="cloud_download_icon">Cloud download icon</string>

    <!-- channel name -->
    <string name="channel_name">Loading Application Status</string>

    <string name="ok">OK</string>
    <string name="file_name">File name:</string>
    <string name="status">Status:</string>

</resources>
